--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
+            android:supportsRtl="false"
             android:theme="@style/AppTheme">
         <activity android:name="com.mycode.goran.flags.MainActivity">
             <intent-filter>
@@ -19,11 +19,11 @@
             </intent-filter>
         </activity>
         <activity android:name="com.mycode.goran.flags.GameActivity"/>
-        <activity android:name="com.mycode.goran.flags.End" />
+        <activity android:name="com.mycode.goran.flags.End_Activity" />
         <activity android:name="com.mycode.goran.flags.Score"/>
         <meta-data
                 android:name="com.google.android.gms.ads.APPLICATION_ID"
-                android:value="ca-app-pub-3940256099942544~3347511713"/>
+                android:value="@string/ad_id"/>
     </application>
 
 </manifest>
